# wjs

./: Cargo.toml  README.rst
derive/: Cargo.toml
derive/src/: lib.rs
src/: compiler.rs  gc.rs  main.rs  scope.rs  value.rs  vm.rs
src/gc/: gc_ptr.rs  shadowstack.rs  trace.rs  type_id.rs
